src/objects/EventConfiguration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>authType__c</fullName>
        <label>Authorization Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>commandClassName__c</fullName>
        <label>commandClassName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disableDispatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this field to block outbound envets to send http request</description>
        <label>disableDispatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>endPointUrl__c</fullName>
        <label>endPointUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>headers__c</fullName>
        <label>Headers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>method__c</fullName>
        <label>method</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oauthName__c</fullName>
        <description>define OAuth Custom Setting Name to get this config during request to target</description>
        <label>OAuth Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Event Configuration</label>
</CustomObject>